add like animation and jQuery

--- a/main.css
+++ b/main.css
@@ -124,6 +124,33 @@ a:hover {
 }
 
 /*------------------------------------
+*	Animation
+--------------------------------------*/
+
+@keyframes flash {
+	from, 50%, to {
+		opacity: 0;
+		filter: alpha(opacity=0);
+	}
+
+	25%, 75% {
+		opacity: 1;
+		filter: alpha(opacity=100);
+	}
+}
+
+/*------------------------------------
+*	States
+--------------------------------------*/
+.is-liked {
+	animation: flash 2s;
+}
+
+
+
+
+
+/*------------------------------------
 *	Sub Header
 --------------------------------------*/
 /*.intro {
