--- a/main.css
+++ b/main.css
@@ -18,8 +18,6 @@
 
 body {
 	font-family: 400 1em/1.5em 'Lato', sans-serif;
-
-
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -32,15 +30,13 @@ ol, ul {
 	list-style-type: none;
 }
 
-
-
-
 p {
 
 }
 
 a {
 	color: rgb(253, 154, 177);
+	transition: 0.4s ease-in-out;
 }
 
 a:active,
@@ -94,7 +90,6 @@ a:hover {
 	font-size: 1.125em;
 	letter-spacing: .02em;
 	margin-bottom: 10px;
-
 }
 
 
@@ -123,6 +118,10 @@ a:hover {
 	clear: both;
 }
 
+
+
+
+
 /*------------------------------------
 *	Animation
 --------------------------------------*/
@@ -139,6 +138,31 @@ a:hover {
 	}
 }
 
+
+/*------------------------------------
+*	Form
+--------------------------------------*/
+.form {
+	margin-bottom: 30px;
+	height: 0;
+	opacity: 0;
+	visibility: hidden;
+
+}
+.form-label {
+	display: block;
+	font-weight: 700;
+	margin-bottom: 10px;
+}
+
+.form-input {
+	border: 1px solid rgb(220, 220, 220); 
+	border-radius: 4px;
+	box-sizing: border-box;
+	font-size: 20px;
+	padding: 10px;
+	width: 100%;
+}
 /*------------------------------------
 *	States
 --------------------------------------*/
@@ -146,6 +170,12 @@ a:hover {
 	animation: flash 2s;
 }
 
+.is-visible {
+	height: auto;
+	opacity: 1;
+	transition: opacity 0.2s ease-in-out, visibility 0.2s ease-in-out;
+	visibility: visible;
+}
 
 
 
@@ -153,30 +183,14 @@ a:hover {
 /*------------------------------------
 *	Sub Header
 --------------------------------------*/
-/*.intro {
-	font-size: 1.25em;
-	font-weight: bold;
-	letter-spacing: .04em;
-	margin-bottom: 0;
+.sub-header {
+	font-family: 'Lato', sans-serif;
+	margin-bottom: 20px;
 }
 
-.description {
-	float: left;
-	font-size: .80em;
-	font-weight: normal;
-	margin-top: 0;
-	padding-right: 5px;
-	
+.add-now {
+	margin-left: 10px;
 }
-
-.add-link {
-	font-size: .85em;
-	color: rgb(253, 154, 177);
-	position: absolute;
-}
-
-
-
 
 
 
